log
mi., 20 de abr. de 2022  9:49:47: 
 treemap.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  1|8
total_score: 0/70
e08b091
mi., 20 de abr. de 2022  9:50:17: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|7
total_score: 5/70
92eb910
mi., 20 de abr. de 2022 10:06:39: 
 treemap.c | 16 +++++++++++++++-
 1 file changed, 15 insertions(+), 1 deletion(-)
In file included from test.c:4:0:
treemap.c: In function 'searchTreeMap':
treemap.c:80:13: error: too few arguments to function 'is_equal'
         if (is_equal(key, tree->current->pair->key) == 1)
             ^~~~~~~~
treemap.c:22:5: note: declared here
 int is_equal(TreeMap* tree, void* key1, void* key2){
     ^~~~~~~~
treemap.c:90:16: error: return from incompatible pointer type [-Werror=incompatible-pointer-types]
     return tree->current;
            ~~~~^~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
a916ddf
mi., 20 de abr. de 2022 10:07:42: 
 treemap.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
In file included from test.c:4:0:
treemap.c: In function 'searchTreeMap':
treemap.c:80:13: error: too few arguments to function 'is_equal'
         if (is_equal(key, tree->current->pair->key) == 1)
             ^~~~~~~~
treemap.c:22:5: note: declared here
 int is_equal(TreeMap* tree, void* key1, void* key2){
     ^~~~~~~~
Compilation failed
5fec845
mi., 20 de abr. de 2022 10:08:19: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  11|6
total_score: 15/70
b626746
mi., 20 de abr. de 2022 10:09:23: 
 treemap.c | 4 +---
 1 file changed, 1 insertion(+), 3 deletions(-)
 tests:  11|6
total_score: 15/70
7540d46
mi., 20 de abr. de 2022 10:21:49: 
 treemap.c | 32 ++++++++++++++++++++++++++++++++
 1 file changed, 32 insertions(+)
 tests:  13|5
total_score: 25/70
12c9a03
mi., 20 de abr. de 2022 10:24:48: 
 treemap.c | 7 +++++++
 1 file changed, 7 insertions(+)
 tests:  15|4
total_score: 25/70
9953d1c
mi., 20 de abr. de 2022 14:22:38: 
 treemap.c | 41 +++++++++++++++++++++++++++++++++++++++++
 1 file changed, 41 insertions(+)
In file included from test.c:4:0:
treemap.c: In function 'removeNode':
treemap.c:101:5: error: suggest parentheses around assignment used as truth value [-Werror=parentheses]
     if(node->left = node->right = NULL)
     ^~
treemap.c:103:9: error: suggest parentheses around assignment used as truth value [-Werror=parentheses]
         if (node->parent->left = node)
         ^~
treemap.c:109:9: error: suggest parentheses around assignment used as truth value [-Werror=parentheses]
         else if (node->parent->right = node)
         ^~~~
treemap.c:119:9: error: suggest parentheses around assignment used as truth value [-Werror=parentheses]
         if(node->parent->left = node)
         ^~
treemap.c:128:9: error: suggest parentheses around assignment used as truth value [-Werror=parentheses]
         else if(node->parent->right = node)
         ^~~~
treemap.c:99:16: error: unused variable 'aux' [-Werror=unused-variable]
     TreeNode * aux;
                ^~~
cc1.exe: all warnings being treated as errors
Compilation failed
954ca4b
mi., 20 de abr. de 2022 14:23:24: 
 treemap.c | 5 ++---
 1 file changed, 2 insertions(+), 3 deletions(-)
In file included from test.c:4:0:
treemap.c: In function 'removeNode':
treemap.c:100:5: error: suggest parentheses around assignment used as truth value [-Werror=parentheses]
     if(node->left = node->right = NULL)
     ^~
treemap.c:102:9: error: suggest parentheses around assignment used as truth value [-Werror=parentheses]
         if (node->parent->left = node)
         ^~
treemap.c:108:9: error: suggest parentheses around assignment used as truth value [-Werror=parentheses]
         if (node->parent->right = node)
         ^~
treemap.c:118:9: error: suggest parentheses around assignment used as truth value [-Werror=parentheses]
         if(node->parent->left = node)
         ^~
treemap.c:127:9: error: suggest parentheses around assignment used as truth value [-Werror=parentheses]
         if(node->parent->right = node)
         ^~
cc1.exe: all warnings being treated as errors
Compilation failed
7c2abf7
mi., 20 de abr. de 2022 14:23:59: 
 treemap.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
In file included from test.c:4:0:
treemap.c: In function 'removeNode':
treemap.c:100:34: error: comparison between pointer and integer [-Werror]
     if(node->left == node->right == NULL)
                                  ^~
treemap.c:100:19: error: suggest parentheses around comparison in operand of '==' [-Werror=parentheses]
     if(node->left == node->right == NULL)
        ~~~~~~~~~~~^~~~~~~~~~~~~~
treemap.c:102:9: error: suggest parentheses around assignment used as truth value [-Werror=parentheses]
         if (node->parent->left = node)
         ^~
treemap.c:108:9: error: suggest parentheses around assignment used as truth value [-Werror=parentheses]
         if (node->parent->right = node)
         ^~
cc1.exe: all warnings being treated as errors
Compilation failed
437bcbf
mi., 20 de abr. de 2022 14:24:18: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:4:0:
treemap.c: In function 'removeNode':
treemap.c:100:34: error: comparison between pointer and integer [-Werror]
     if(node->left == node->right == NULL)
                                  ^~
treemap.c:100:19: error: suggest parentheses around comparison in operand of '==' [-Werror=parentheses]
     if(node->left == node->right == NULL)
        ~~~~~~~~~~~^~~~~~~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
70fed43
mi., 20 de abr. de 2022 14:24:51: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  16|4
total_score: 30/70
ae85fcc
mi., 20 de abr. de 2022 14:28:16: 
 treemap.c | 19 ++++++++++++++++---
 1 file changed, 16 insertions(+), 3 deletions(-)
 tests:  0|0
a7c205f
mi., 20 de abr. de 2022 14:29:18: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  17|4
total_score: 35/70
1c863a7
mi., 20 de abr. de 2022 14:29:49: 
 treemap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|0
8700e60
mi., 20 de abr. de 2022 14:30:01: 
 treemap.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  17|4
total_score: 35/70
cc4131b
mi., 20 de abr. de 2022 14:47:17: 
 treemap.c | 28 +++++++++++++++++++++++++++-
 1 file changed, 27 insertions(+), 1 deletion(-)
 tests:  0|0
325a9fa
mi., 20 de abr. de 2022 14:49:38: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  17|4
total_score: 35/70
9ff3035
mi., 20 de abr. de 2022 14:56:32: 
 treemap.c | 23 ++++++++++++++++-------
 1 file changed, 16 insertions(+), 7 deletions(-)
test.c: In function 'removeNode':
test.c:503:5: error: 'main' is normally a non-static function [-Werror=main]
 int main( int argc, char *argv[] ) {
     ^~~~
test.c:606:1: error: expected declaration or statement at end of input
 }
 ^
At top level:
test.c:503:5: error: 'main' defined but not used [-Werror=unused-function]
 int main( int argc, char *argv[] ) {
     ^~~~
cc1.exe: all warnings being treated as errors
Compilation failed
afff1dd
mi., 20 de abr. de 2022 14:57:44: 
 treemap.c | 2 ++
 1 file changed, 2 insertions(+)
test.c: In function 'removeNode':
test.c:503:5: error: 'main' is normally a non-static function [-Werror=main]
 int main( int argc, char *argv[] ) {
     ^~~~
test.c:606:1: error: expected declaration or statement at end of input
 }
 ^
At top level:
test.c:503:5: error: 'main' defined but not used [-Werror=unused-function]
 int main( int argc, char *argv[] ) {
     ^~~~
cc1.exe: all warnings being treated as errors
Compilation failed
9abec70
